<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/gamebackground"
    tools:context=".MainActivity" >



    <ImageButton

        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/titleText_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt"
        android:layout_marginBottom="20pt"
        android:rotationX="-11"
        android:text="@string/settingsName"
        android:textColor="#4263f5"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#4263f5"
        android:textSize="40dp"
        android:text="Text Size" />

    <RadioGroup
        android:id="@+id/sizeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smallText"
            android:textColor="#4263f5"
            android:textSize="30dp"
            />

        <RadioButton
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mediumText"
            android:textColor="#4263f5"
            android:textSize="30dp"
            />

        <RadioButton
            android:id="@+id/large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/largeText"
            android:textColor="#4263f5"
            android:textSize="30dp"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/screenRotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Auto Rotate"
            android:textColor="#4263f5"
            android:textSize="40dp" />

        <Switch
            android:id="@+id/rotateSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </LinearLayout>


</LinearLayout>
</ScrollView>